@@ -1,5 +1,5 @@
 # Network UPS Tools (NUT) systemd integration
-# Copyright (C) 2011-2025 by NUT contributors
+# Copyright (C) 2011-2026 by NUT contributors
 # Distributed under the terms of GPLv2+
 # See https://networkupstools.org/
 # and https://github.com/networkupstools/nut/
@@ -34,7 +34,12 @@ User=root
 # starts follow-up units; it should not be a problem for those
 Type=forking
 Restart=always
+EnvironmentFile=-@CONFPATH@/nut.conf
 Environment=REPORT_RESTART_42=no
+# DO NOT actually start if MODE is known and is "netclient"; however
+# do start (and maybe fail if not yet configured), for other MODE
+# values or if nut.conf file is absent:
+@SYSTEMD_AVAILABLE_EXEC_CONDITION@ExecCondition=/bin/sh -c '[ x"${MODE}" != x"netclient" ]'
 ExecStart=@NUT_LIBEXECDIR@/nut-driver-enumerator.sh --daemon-after
 # Note: this is an async event, actual reconfiguration may take some time to
 # complete after this signal.
