@@ -1,5 +1,5 @@
 # Network UPS Tools (NUT) systemd integration
-# Copyright (C) 2011-2025 by NUT contributors
+# Copyright (C) 2011-2026 by NUT contributors
 # Distributed under the terms of GPLv2+
 # See https://networkupstools.org/
 # and https://github.com/networkupstools/nut/
@@ -37,8 +37,14 @@ Type=oneshot
 # completes, for a non-oneshot case. The script itself handles restarting of
 # nut-server which is the primary concerned dependency at the moment, so we
 # don't want it to fail the unit (when it can't restart).
-Environment=REPORT_RESTART_42=no
 EnvironmentFile=-@CONFPATH@/nut.conf
+Environment=REPORT_RESTART_42=no
+# DO NOT actually start if MODE is known and is "netclient"; however
+# do start (and maybe fail if not yet configured), for other MODE
+# values or if nut.conf file is absent:
+@SYSTEMD_AVAILABLE_EXEC_CONDITION@ExecCondition=/bin/sh -c '[ x"${MODE}" != x"netclient" ]'
+# This should be executed by the system, but better safe than sorry
+# (e.g. in custom rebuilds):
 ExecStartPre=-@SYSTEMD_TMPFILES_PROGRAM@ --create @systemdtmpfilesdir@/nut-common-tmpfiles.conf
 ExecStart=@NUT_LIBEXECDIR@/nut-driver-enumerator.sh
 ExecReload=@NUT_LIBEXECDIR@/nut-driver-enumerator.sh
