@@ -1,5 +1,5 @@
 # Network UPS Tools (NUT) systemd integration
-# Copyright (C) 2011-2025 by NUT contributors
+# Copyright (C) 2011-2026 by NUT contributors
 # Distributed under the terms of GPLv2+
 # See https://networkupstools.org/
 # and https://github.com/networkupstools/nut/
@@ -57,6 +57,12 @@ Environment=NUT_IGNORE_NOWAIT=true
 Environment=NUT_QUIET_INIT_NDE_WARNING=true
 EnvironmentFile=-@CONFPATH@/nut.conf
 SyslogIdentifier=%N
+# DO NOT actually start if MODE is known and is "netclient"; however
+# do start (and maybe fail if not yet configured), for other MODE
+# values or if nut.conf file is absent:
+@SYSTEMD_AVAILABLE_EXEC_CONDITION@ExecCondition=/bin/sh -c '[ x"${MODE}" != x"netclient" ]'
+# This should be executed by the system, but better safe than sorry
+# (e.g. in custom rebuilds):
 ExecStartPre=-@SYSTEMD_TMPFILES_PROGRAM@ --create @systemdtmpfilesdir@/nut-common-tmpfiles.conf
 ExecStart=/bin/sh -c 'NUTDEV="`@NUT_LIBEXECDIR@/nut-driver-enumerator.sh --get-device-for-service %i`" && [ -n "$NUTDEV" ] || { echo "FATAL: Could not find a NUT device section for service unit %i" >&2 ; exit 1 ; } ; exec @SBINDIR@/upsdrvctl @SYSTEMD_DAEMON_ARGS_DRIVER@ start "$NUTDEV"'
 # SIGHUP: simple reload (ignore values we can not change on the fly)
