@@ -1,5 +1,5 @@
 # Network UPS Tools (NUT) systemd integration
-# Copyright (C) 2011-2025 by NUT contributors
+# Copyright (C) 2011-2026 by NUT contributors
 # Distributed under the terms of GPLv2+
 # See https://networkupstools.org/
 # and https://github.com/networkupstools/nut/
@@ -34,6 +34,12 @@ Documentation=@NUT_WEBSITE_BASE@/docs/man/nut.conf.html
 [Service]
 EnvironmentFile=-@CONFPATH@/nut.conf
 SyslogIdentifier=%N
+# DO NOT actually start if MODE is known and is "netserver"; however
+# do start (and maybe fail if not yet configured), for other MODE
+# values or if nut.conf file is absent:
+@SYSTEMD_AVAILABLE_EXEC_CONDITION@ExecCondition=/bin/sh -c '[ x"${MODE}" != x"netserver" ]'
+# This should be executed by the system, but better safe than sorry
+# (e.g. in custom rebuilds):
 ExecStartPre=-@SYSTEMD_TMPFILES_PROGRAM@ --create @systemdtmpfilesdir@/nut-common-tmpfiles.conf
 ExecStart=@SBINDIR@/upsmon @SYSTEMD_DAEMON_ARGS_UPSMON@
 ExecReload=@SBINDIR@/upsmon -c reload
